[gd_scene load_steps=5 format=3 uid="uid://bwtcr4yo0iq4"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_hrlt3"]
[ext_resource type="FontFile" uid="uid://desarknyflrgx" path="res://assets/fonts/Fondamento/Fondamento-Regular.ttf" id="2_vok4p"]
[ext_resource type="PackedScene" uid="uid://dnm3b85naf3q1" path="res://scenes/food_gui.tscn" id="3_3ie7y"]
[ext_resource type="PackedScene" uid="uid://doiwwyoexmwlh" path="res://scenes/gold_gui.tscn" id="4_x4aa0"]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_hrlt3")
foodBar = ExtResource("3_3ie7y")
goldBar = ExtResource("4_x4aa0")

[node name="gameMessage" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -139.5
offset_right = 139.5
offset_bottom = 42.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_vok4p")
theme_override_font_sizes/font_size = 30
text = "aaaaaa"
horizontal_alignment = 1

[node name="foodRow" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="goldRow" type="HBoxContainer" parent="."]
offset_left = 1.0
offset_top = 52.0
offset_right = 41.0
offset_bottom = 92.0
